--- a/KKTOS/MainPage.xaml
+++ b/KKTOS/MainPage.xaml
@@ -51,6 +51,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Image Grid.Row="0" x:Name="beedPanel1" Source="Image/battleImage.png" ManipulationStarted="beedPanel1_ManipulationStarted"/>
+            <TextBlock x:Name="ComboText" Text="133" FontSize="50" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="40"/>
             <local:TosPanel x:Name="beedPanel" Grid.Row="1" Height="420" Width="450" Margin="0,10"/>
         </Grid>
 
