--- a/KKTOS/MainPage.xaml
+++ b/KKTOS/MainPage.xaml
@@ -50,8 +50,9 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Image Grid.Row="0" x:Name="beedPanel1" Source="Image/battleImage.png" ManipulationStarted="beedPanel1_ManipulationStarted"/>
-            <TextBlock x:Name="ComboText" Text="133" FontSize="50" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="40"/>
+            <Image Grid.Row="0" x:Name="beedPanel1" Source="Image/battleImage.png"/>
+            <Rectangle x:Name="changeBeed" VerticalAlignment="Bottom" HorizontalAlignment="Left" Height="60" Width="60" Fill="Transparent" Margin="30,0" ManipulationStarted="OnChangeBeedManipulationStarted"/>
+            <TextBlock x:Name="ComboText" Text="0 Combo !!" FontSize="50" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="40"/>
             <local:TosPanel x:Name="beedPanel" Grid.Row="1" Height="420" Width="450" Margin="0,10"/>
         </Grid>
 
